<resources>
    <string name="app_name">Bee Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_song">Song</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_help">Help</string>
    <string name="playlists">PlayList</string>
    <string name="singer">Singer</string>
    <string name="album">Album</string>
    <string name="cant_delete_this_song">Can\'t delete this song</string>
    <string name="cant_get_your_data">Can\'t get your data</string>
    <string name="song">song</string>
    <string name="songs">songs</string>
    <string name="permission_denied_please_grant_permission">PERMISSION DENIED, PLEASE GRANT
        PERMISSION!</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="send_email">send email</string>
    <string name="subject">Subject</string>
    <string name="please_say_something_about_my_app">Please say something about my App...</string>
    <string name="feedback_email">goldenlightning1252@gmail.com</string>
    <string name="email_type">message/rfc822</string>
    <string name="choose_app_to_send_email">Choose app to send email/rfc822</string>
</resources>
