<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/icon_library"
        android:title="@string/title_library"/>

    <item
        android:id="@+id/nav_song"
        android:icon="@drawable/icon_song"
        android:title="@string/title_song"/>

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/icon_favorite"
        android:title="@string/title_favorite"/>
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/icon_help"
        android:title="@string/title_help"/>

</menu>